# voilip

./: .gitignore  Cargo.toml  README.md  voilip.service
src/: audio.rs  config.rs  main.rs  output.rs  transcriber.rs  utils.rs
